♻️ Moves 99% of REI to common now